--- a/ColeccionDeJuegos/Info.plist
+++ b/ColeccionDeJuegos/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>usar camara</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>La apliacion Coleccion Juegos necesita acceso a tus imagenes =)</string>
 	<key>CFBundleDevelopmentRegion</key>
